@@ -1,3 +1,10 @@
+2008-11-04  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
+	* modules/toc.pl ($TocConvertH1TagsToH2Tags): New option.
+	(TocRule): Use the new option; principally, this permits Wiki
+	administrators to prevent this module from converting
+	"<h1>...</h1>" tags "<h2>...</h2>" tags.
+
 2008-10-29  Alex Schroeder  <alex@gnu.org>
 
 	* modules/translation-links.pl (DoTranslationLink): Report a lot
